--- a/package.json
+++ b/package.json
@@ -10,18 +10,17 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Adriel21/tec-api.git"
+    "url": "git+https://github.com/Adriel21/mobile_api.git"
   },
   "author": "Adriel",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Adriel21/tec-api/issues"
+    "url": "https://github.com/Adriel21/mobile_api/issues"
   },
-  "homepage": "https://github.com/Adriel21/tec-api#readme",
+  "homepage": "https://github.com/Adriel21/mobile_api#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3"
   }
 }
